Closed Bug 1740254 Opened 3 years ago Closed 3 years ago

GC parameters are not sufficiently checked

Categories

(Core :: JavaScript: GC, defect, P3)

defect

Tracking

()

RESOLVED FIXED
96 Branch
Tracking Status
firefox96 --- fixed

People

(Reporter: jonco, Assigned: jonco)

References

Details

Attachments

(1 file)

I don't know whether this is the cause of bug 1740097, but the test in question sets the allocationThreshold to ~1000000. This parameter is in MB and converting this value to bytes causes an overflow which ends up setting the parameter to something really small.

This adds a 4GB max limit for GC parameters related to heap size and fixes the
test that set this to an over-large value.

Pushed by jcoppeard@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e49ceeb6a2ea
Check GC heap parameters are reasonable r=sfink
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 96 Branch
Regressions: 1749263
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: