Bug 1740254 - Check GC heap parameters are reasonable r=sfink

This adds a 4GB max limit for GC parameters related to heap size and fixes the
test that set this to an over-large value.

Differential Revision: https://phabricator.services.mozilla.com/D130749